<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:orientation="vertical"
        android:weightSum="100">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@color/lightSky"
        android:layout_weight="50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_title"
            android:textColor="#000"
            android:text="@string/Activity_name"
            android:textSize="20dp"
            android:textAlignment="textStart"
            android:layout_marginTop="3dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/event_starting_time"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_starting_time"
                    android:textColor="#000"
                    android:text="@string/event_starting_time"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:paddingRight="10dp"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_starting_date"
                    android:textColor="#000"
                    android:text="@string/event_starting_time"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/manager_name"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
            <android.support.v4.widget.Space
                android:layout_width="7dp"
                android:layout_height="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manager_name"
                android:textColor="#000"
                android:text="@string/manager_name"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/manager_email"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
            <android.support.v4.widget.Space
                android:layout_width="7dp"
                android:layout_height="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manager_email"
                android:textColor="#000"
                android:text="@string/manager_email"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/Manager_phone_number"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
            <android.support.v4.widget.Space
                android:layout_width="7dp"
                android:layout_height="1dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manager_phone"
                android:textColor="#000"
                android:text="@string/Manager_phone_number"
                android:textSize="20dp"
                android:textAlignment="textStart"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.google.android.gms.maps.MapView
        android:id="@+id/activity_map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="50"/>
    </LinearLayout>

</FrameLayout>