<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <?xml version="1.0" encoding="utf-8"?>
    <!--<FrameLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:paddingLeft="3dp"-->
        <!--android:paddingRight="3dp"-->
        <!--android:paddingTop="10dp">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/linear_Background"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->

            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<ImageView-->
                    <!--android:id="@+id/image_background"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content" />-->

                <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                    <!--android:id="@+id/card_view"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:elevation="50dp"-->
                    <!--android:paddingLeft="30dp"-->
                    <!--android:paddingTop="15dp"-->
                    <!--android:paddingRight="30dp"-->
                    <!--android:paddingBottom="15dp"-->
                    <!--card_view:cardBackgroundColor="@color/halfTrans"-->
                    <!--card_view:cardCornerRadius="10dp">-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<Space-->
                            <!--android:layout_width="1dp"-->
                            <!--android:layout_height="30dp" />-->

                        <!--<EditText-->
                            <!--android:id="@+id/et_event_name"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:hint="@string/enter_event_name" />-->
                    <!--</LinearLayout>-->

                    <!--<Space-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_height="30dp" />-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<Spinner-->
                            <!--android:id="@+id/types_spinner"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content" />-->
                    <!--</LinearLayout>-->

                    <!--<Space-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_height="30dp" />-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<EditText-->
                            <!--android:id="@+id/date_text"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:ems="10"-->
                            <!--android:focusable="false"-->
                            <!--android:hint="@string/enter_date"-->
                            <!--android:inputType="date" />-->
                    <!--</LinearLayout>-->

                    <!--<Space-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_height="30dp" />-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<EditText-->
                            <!--android:id="@+id/time_text"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:ems="10"-->
                            <!--android:focusable="false"-->
                            <!--android:hint="@string/enter_time"-->
                            <!--android:inputType="time" />-->
                    <!--</LinearLayout>-->

                    <!--<Space-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_height="30dp" />-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<fragment-->
                            <!--android:id="@+id/autocomplete_fragment"-->
                            <!--android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content" />-->

                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="10dp">-->

                        <!--<Button-->
                            <!--android:id="@+id/cancel_event_button"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:text="@string/cancel_event_button" />-->

                        <!--<Button-->
                            <!--android:id="@+id/save_event_button"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:text="@string/save_event_button" />-->
                    <!--</LinearLayout>-->
                <!--</android.support.v7.widget.CardView>-->
            <!--</FrameLayout>-->
        <!--</LinearLayout>-->

    <!--</FrameLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/create_activity_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/colorPrimary"/>-->

        <Space
            android:layout_height="30dp"
            android:layout_width="1dp" />

        <EditText
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_event_name" />

        <Space
            android:layout_height="30dp"
            android:layout_width="1dp" />

        <Spinner
            android:id="@+id/types_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_height="30dp"
            android:layout_width="1dp" />

        <EditText
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/enter_date"/>

        <Space
            android:layout_height="30dp"
            android:layout_width="1dp" />

        <EditText
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:focusable="false"
            android:hint="@string/enter_time"/>

        <Space
            android:layout_height="30dp"
            android:layout_width="1dp" />

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name=
                "com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_event_button"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/save_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_event_button"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>